--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/node": "^24.0.13",
 		"husky": "^9.1.7",
 		"jest": "^30.0.4",
+		"jest-environment-jsdom": "^30.0.4",
 		"lint-staged": "^16.1.2",
 		"prettier": "^3.6.2",
 		"rollup": "^4.44.2",
