--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -5,6 +5,9 @@ on:
         branches:
             - main
 
+permissions:
+    contents: read
+
 jobs:
     publish:
         name: Publish everywhere
@@ -12,6 +15,9 @@ jobs:
 
         permissions:
             contents: write
+            issues: write
+            pull-requests: write
+            id-token: write
 
         steps:
             - name: Checkout repository
