--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -40,6 +40,7 @@ jobs:
 
             - name: Build, create release, and publish to npm
               env:
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: npx semantic-release
