--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 	"license": "MIT",
 	"exports": {
 		".": {
-			"import": "./dist/index.js",
-			"types": "./dist/index.d.ts"
+			"import": "./dist/index.min.js",
+			"types": "./dist/src/index.d.ts"
 		}
 	},
 	"version": "1.0.0-alpha",
